# currency_converter

./: .dockerignore  .env.example  .gitignore  README.md  config.yml  data.7z  data.json  docker-compose.production.yml  docker-compose.yml  makefile  pyproject.toml  requirements.txt  setup.cfg  try.py
currency_converter/: Dockerfile  manage.py  pyproject.toml
currency_converter/api/: openapi.py  serializers.py  urls.py  views.py
currency_converter/config/: asgi.py  constans.py  urls.py  wsgi.py
currency_converter/config/components/: __init__.py  apscheduler.py  logging.py  swagger.py
currency_converter/config/django/: base.py  dev.py
currency_converter/currency/: admin.py  models.py  utils.py
currency_converter/currency/migrations/: 0001_initial.py  0002_alter_echangeratetousd_currency.py  0002_currency_image_currency_sign.py  0003_alter_currency_code_alter_currency_name_and_more.py  0003_currency_type.py  0004_alter_currency_sign.py  0004_currencyechangerate_alter_currency_type_and_more.py  0005_alter_currencyechangerate_last_update.py
currency_converter/currency/models/: currency.py  currency_echangerate.py
currency_converter/currency_converter/: constans.py  settings.py  urls.py
currency_converter/scheduler/: apps.py  periodic_tasks.py
currency_converter/scheduler/tasks/: fiat_update_rate_from_cb.py
currency_converter/users/migrations/: 0001_initial.py
nginx/: nginx.conf
